# DemoJNI

./: README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/kang/demondk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kang/demondk/: MainActivity.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  jni_lib.cpp  jni_lib.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kang/demondk/: ExampleUnitTest.java
